2008-10-15  Henri Häkkinen  <henux@users.sourceforge.net>

	* google: Added -l option.
	* google.1: Fixed typos and added option -o.

2008-10-14  Henri Häkkinen  <henux@users.sourceforge.net>

	* google: Added -o option.
	* google.1: Created the manpage.

2008-10-13  Henri Häkkinen  <henux@users.sourceforge.net>

	Initial version.