@@ -1,4 +1,17 @@
 cli-google README
 
-`google` is a command line tool which allows Google searches to be done
-from the terminal.
+Copyright (C) 2008 Henri Hakkinen
+
+`google` is a command line tool for doing Google searches from the
+terminal.  It comes with a manual page.  To install the package to your
+system, run `make install` as root.
+
+Usage: google [OPTIONS] KEYWORDS...
+
+Options
+  -s N     start at result N
+  -n N     shows the first N results
+  -l LANG  search for language LANG, such fi for Finnish
+  -o       open the first result in web browser
+
+Report bugs to <henux@users.sourceforge.net>.
